fix: 修正资源路径以适配不同环境部署
修改vite.config.js中的base配置，使其在生产环境下使用'/Weather/'路径，开发环境下使用'/'路径。同时将index.html中的资源路径改为相对路径，确保在不同部署环境下都能正确加载资源。

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/weather.ico">
+    <!-- 使用相对路径，这样可以正确匹配base路径 -->
+    <link rel="icon" href="./weather.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <!-- 使用相对路径，这样可以正确匹配base路径 -->
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
