--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- 保持相对路径，Vite会正确处理模块导入 -->
-    <script type="module" src="/src/main.js"></script>
+    <!-- 使用相对路径确保正确加载 -->
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
